--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "https://mikael-andersson91.github.io/" # the base hostname & protocol for 
 github_username:  mikael-andersson91
 
 # Build settings
-theme: minima
+theme: Modernist
 plugins:
   - jekyll-feed
 
