use remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,10 @@ url: "https://mikael-andersson91.github.io/" # the base hostname & protocol for 
 github_username:  mikael-andersson91
 
 # Build settings
-theme: Modernist
+# theme: Modernist
+remote_theme: pages-themes/modernist@v0.2.0
 plugins:
-  - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
