--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "@docusaurus/preset-classic": "3.8.1",
     "@docusaurus/theme-mermaid": "^3.8.1",
     "@mdx-js/react": "^3.0.0",
+    "all": "^0.0.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
+    "raw-loader": "^4.0.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "yaml": "^2.8.0",
+    "yaml-loader": "^0.8.1"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
